# hump-yard-naming-exif

./: CHANGELOG.md  README.md  pyproject.toml
scripts/: create_test_images.py
src/hump_yard_naming_exif/: __init__.py  parser.py  plugin.py  validator.py
tests/: __init__.py  conftest.py  test_parser.py  test_plugin.py  test_validator.py
tests/fixtures/: README.md
